test/shared/applications/valid/withDirectories/data/server/views/lists/sampleList/projections.js
'use strict';

const { projections } = require('../../../../base/server/views/lists/sampleList');

module.exports = projections;
